Bug 1374475 - Don't throttle download of media files under 8MB in size. r=jwwang

The startup latency for an HTTP transaction can be high, this adds delay when
we're seeking into an unbuffered range. So we should not throttle the download
for small files, to speed up seeking.

This also works around the problem in bug 1373618 in the case where the
download is fast enough for the entire file to predownload before a seek.

MozReview-Commit-ID: A8Hqi71IJ1H